--- a/statistics.html
+++ b/statistics.html
@@ -89,7 +89,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=n4NSmMwm'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=n4NSmMwm'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -246,7 +246,7 @@ generate?...</p>
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999697455774-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999697455774-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -293,7 +293,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Chicago Rockford  Chicago</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://recruit.ap.uci.edu/JPF05335'>Tenure-Track/Tenured Faculty Position - Statistics (JPF05335) - UCI - Recruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ap.uci.edu/JPF05335'>Tenure-Track/Tenured Faculty Position - Statistics (JPF05335) - UCI - Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -377,7 +377,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Rockville, MD Rockville, MD North America United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/9E7BD36103'>Statistics & Data Corporation (SDC) - Jobs: Office Coordinator/Administrative Assistant - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/9E7BD36103'>Statistics & Data Corporation (SDC) - Jobs: Office Coordinator/Administrative Assistant - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -459,7 +459,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/040ECF198D'>Statistics & Data Corporation (SDC) - Jobs: Statistical Programmer - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/040ECF198D'>Statistics & Data Corporation (SDC) - Jobs: Statistical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
